# PktParser

./: .editorconfig  .env.example  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  compile.ps1  compile.sh  docker-compose.cluster.yml  docker-compose.yml  drogon_config.json  full_pipeline.ps1  full_pipeline.sh  full_pipeline_multiple_files.sh  magik_run.sh  vcpkg.json
cmake/: patch_cassandra_msvc.cmake
config/: cassandra.yaml
scripts/: build_mappings_to_db.py  create_db.sh  create_tables.sql  drop_db.sh  fetch_build_timestamp.py  generate_opcodes.py  generate_opcodes_and_registers.py  generate_opcodes_header.py  import_build_mappings.py  import_opcodes.py  opcodes_to_db.py  setup.sh  setup_ubuntu.sh  setup_win.ps1
scripts/create/: cassandra.cql  cassandra.sh  cassandra_dev.cql  cassandra_dev.sh  elasticsearch.sh  elasticsearch_mapping.json  postgres.sh
scripts/drop/: cassandra.sh  elasticsearch.sh  postgres.sh
src/: Define.h  Logger.h  Main.cpp
src/Database/: BuildInfo.cpp  BuildInfo.h  Config.cpp  Config.h  Database.cpp  Database.h  ElasticClient.cpp  ElasticClient.h  OpcodeCache.cpp  OpcodeCache.h
src/Enums/: CastFlags.h  Direction.h  GuidTypes.h  SpellMissType.h  TargetFlags.h  TargetVersions.h
src/IO/: MMapFIle.cpp  MMapFIle.h
src/Misc/: BuildRegistry.cpp  BuildRegistry.h  Define.h  Exceptions.h  Logger.h  Utilities.h  WowGuid.cpp  WowGuid.h
src/PCH/: pchdef.h
src/Parser/: Direction.h  GuidTypes.h  JsonSerializer.cpp  JsonSerializer.h  Opcodes.h  PacketStructures.h  ParallelProcessor.cpp  ParallelProcessor.h  Parser.cpp  Parser.h  ParserMacros.h  PktHandler.h  PktStructures.h
src/Parser/Common/: BaseJsonSerializer.cpp  BaseJsonSerializer.h  BaseVersionParser.h  ISearchFields.h  JsonWriter.h  OpcodeRegistry.h  ParseResult.h  ParserMacros.h  SpellSearchFields.h
src/Parser/Common/Parsers/: AuthHandlers.inl  SpellHandlers.inl  WorldStateHandlers.inl
src/Parser/Versions/: IJsonSerializer.h  IVersionParser.h  VersionFactory.cpp  VersionFactory.h
src/Parser/Versions/Common/: BaseJsonSerializer.cpp  BaseJsonSerializer.h  BaseParser.h
src/Parser/Versions/V11_2_0_62213/: JsonSerializer.cpp  JsonSerializer.h  Opcodes.h  Parser.cpp  Parser.h  RegisterHandlers.inl
src/Parser/Versions/V11_2_0_62213/Handlers/: AuthHandler.cpp  AuthHandler.h  SpellHandler.cpp  SpellHandler.h  WorldStateHandler.cpp  WorldStateHandler.h
src/Parser/Versions/V11_2_0_62213/SearchFields/: SpellSearchFields.cpp  SpellSearchFields.h
src/Parser/Versions/V11_2_0_62213/Serializers/: AuthSerializer.cpp  AuthSerializer.h  SpellSerializer.cpp  SpellSerializer.h  WorldStateSerializer.cpp  WorldStateSerializer.h
src/Parser/Versions/V11_2_0_62213/Structures/: AuthChallengeData.h  SpellCastData.h  SpellTargetData.h  TargetLocation.h  WorldStateData.h
src/Parser/Versions/V11_2_5_63506/: JsonSerializer.cpp  JsonSerializer.h  Opcodes.h  Parser.cpp  Parser.h  RegisterHandlers.inl
src/Parser/Versions/V11_2_5_63506/Handlers/: AuthHandler.cpp  AuthHandler.h  SpellHandler.cpp  SpellHandler.h  WorldStateHandler.cpp  WorldStateHandler.h
src/Parser/Versions/V11_2_5_63506/SearchFields/: SpellSearchFields.cpp  SpellSearchFields.h
src/Parser/Versions/V11_2_5_63506/Serializers/: AuthSerializer.cpp  AuthSerializer.h  SpellSerializer.cpp  SpellSerializer.h  WorldStateSerializer.cpp  WorldStateSerializer.h
src/Parser/Versions/V11_2_5_63506/Structures/: AuthChallengeData.h  SpellCastData.h  SpellTargetData.h  TargetLocation.h  WorldStateData.h
src/Parser/Versions/V11_2_5_64502/: JsonSerializer.cpp  JsonSerializer.h  Opcodes.cpp  Opcodes.h  Parser.cpp  Parser.h
src/Parser/Versions/V11_2_7_64632/: JsonSerializer.cpp  JsonSerializer.h  Opcodes.cpp  Opcodes.h  Parser.cpp  Parser.h  RegisterHandlers.inl
src/Parser/Versions/V11_2_7_64632/Handlers/: AuthHandler.cpp  AuthHandler.h  SpellHandler.cpp  SpellHandler.h  WorldStateHandler.cpp  WorldStateHandler.h
src/Parser/Versions/V11_2_7_64632/SearchFields/: SpellSearchFields.cpp  SpellSearchFields.h
src/Parser/Versions/V11_2_7_64632/Serializers/: AuthSerializer.cpp  AuthSerializer.h  SpellSerializer.cpp  SpellSerializer.h  WorldStateSerializer.cpp  WorldStateSerializer.h
src/Parser/Versions/V11_2_7_64632/Structures/: AuthChallengeData.h  SpellCastData.h  SpellTargetData.h  TargetLocation.h  WorldStateData.h
src/Parser/Versions/V11_2_7_64877/: JsonSerializer.cpp  JsonSerializer.h  Opcodes.h  Parser.cpp  Parser.h  RegisterHandlers.inl
src/Parser/Versions/V11_2_7_64877/Handlers/: AuthHandler.cpp  AuthHandler.h  SpellHandler.cpp  SpellHandler.h  WorldStateHandler.cpp  WorldStateHandler.h
src/Parser/Versions/V11_2_7_64877/SearchFields/: SpellSearchFields.cpp  SpellSearchFields.h
src/Parser/Versions/V11_2_7_64877/Serializers/: AuthSerializer.cpp  AuthSerializer.h  SpellSerializer.cpp  SpellSerializer.h  WorldStateSerializer.cpp  WorldStateSerializer.h
src/Parser/Versions/V11_2_7_64877/Structures/: AuthChallengeData.h  SpellCastData.h  SpellTargetData.h  TargetLocation.h  WorldStateData.h
src/Parser/Versions/V12_0_0_65390/: JsonSerializer.cpp  JsonSerializer.h  Opcodes.h  Parser.cpp  Parser.h  RegisterHandlers.inl
src/Parser/Versions/V12_0_0_65390/Handlers/: AuthHandler.cpp  AuthHandler.h  SpellHandler.cpp  SpellHandler.h  WorldStateHandler.cpp  WorldStateHandler.h
src/Parser/Versions/V12_0_0_65390/SearchFields/: SpellSearchFields.cpp  SpellSearchFields.h
src/Parser/Versions/V12_0_1_65818/: JsonSerializer.cpp  JsonSerializer.h  Opcodes.h  Parser.cpp  Parser.h  RegisterHandlers.inl
src/Reader/: BitReader.cpp  BitReader.h  PktFileReader.cpp  PktFileReader.h
src/Structures/: SpellCastData.h  SpellGoData.h  SpellTargetData.h  TargetLocation.h
src/Structures/Packed/: AuthChallengeData.h  CreatureImmunities.h  MissileTrajectory.h  RuneData.h  SpellCastFixedData.h  SpellCastVisual.h  SpellHealPrediction.h  SpellMissStatus.h  WorldStateInfo.h
tools/sstable/: pom.xml
utils/: debug.sh  es_queries.txt  handy_queries.txt  restart_services.sh  run_multiple_files.sh  run_sstable.sh  start_services.sh  stop_services.sh
(+31 files in other folders)
